--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <html lang="en" style="scroll-behavior: smooth;"><head>
-<title>Home Page | Shiba Milk</title>
+<title>Home Page | Eggstreme Easter</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ShibaMilk is an Ethereum-based smart contract deployed on the Cardano blockchain through the Milkomeda medium.">
-<meta name="keywords" content="shibamilk,bitcoin,dogecoin,doge,defi,coinbase,coinmarketcap,coinmarket,bscscan,whitebit,coingecko,cryptocurrency,crypto,pancakeswap,dex,etherium,eth,btc">
-<meta property="og:title" content="ShibaMilk">
-<meta property="og:url" content="https://shibamilk.com/">
+<meta name="description" content="Introducing Eggstreme Easter, a project with a clever name that was developed by a clever team. This token is original and a breath of fresh air. There have been a plethora of unoriginal Easter tokens recently launched, but this one is looking to set itself apart from the pack. Will you take the dive and ape into the Eggstreme?">
+<meta name="keywords" content="eggstremeeaster,bitcoin,dogecoin,doge,defi,coinbase,coinmarketcap,coinmarket,bscscan,whitebit,coingecko,cryptocurrency,crypto,pancakeswap,dex,etherium,eth,btc">
+<meta property="og:title" content="Eggstreme Easter">
+<meta property="og:url" content="https://eggstremeeaster.online/">
 <meta property="og:type" content="website">
-<meta property="og:description" content="ShibaMilk is an Ethereum-based smart contract deployed on the Cardano blockchain through the Milkomeda medium.">
-<meta property="og:image" content="/images/shibamilk-logo-with-background.jpg">
+<meta property="og:description" content="Introducing Eggstreme Easter, a project with a clever name that was developed by a clever team. This token is original and a breath of fresh air. There have been a plethora of unoriginal Easter tokens recently launched, but this one is looking to set itself apart from the pack. Will you take the dive and ape into the Eggstreme?">
+<meta property="og:image" content="/images/IMG_20220418_013044_058.jpg">
 <link rel="shortcut icon" type="image/png" href="/images/favicon.ico">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="840">
 <meta property="og:image:height" content="840">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:description" content="ShibaMilk is an Ethereum-based smart contract deployed on the Cardano blockchain through the Milkomeda medium.">
-<meta name="twitter:title" content="ShibaMilk">
-<meta name="twitter:site" content="@shibamilk">
+<meta name="twitter:description" content="Introducing Eggstreme Easter, a project with a clever name that was developed by a clever team. This token is original and a breath of fresh air. There have been a plethora of unoriginal Easter tokens recently launched, but this one is looking to set itself apart from the pack. Will you take the dive and ape into the Eggstreme?">
+<meta name="twitter:title" content="Eggstreme Easter">
+<meta name="twitter:site" content="@eggstremeeaster">
 <meta name="twitter:url" content="">
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
@@ -502,10 +502,10 @@ background: #FEDC00;
 <button id="navToggler" class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 <div class="navbar-collapse collapse" id="navbarTogglerDemo02" style="">
 <ul class="navbar-nav ms-auto pt-2 pt-lg-0">
-<li class="nav-item"><a class="nav-link" aria-current="page" href="#home">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-<li class="nav-item"><a class="nav-link" href="#about">Tokenomics</a></li>
-<li class="nav-item"><a class="nav-link" href="#roadmap">Roadmap</a></li>
+<li class="nav-item"><a class="nav-link" aria-current="page" href="#home">HOME</a></li>
+<li class="nav-item"><a class="nav-link" href="#about">ABOUT</a></li>
+<li class="nav-item"><a class="nav-link" href="#about">TOKENOMICS</a></li>
+<li class="nav-item"><a class="nav-link" href="#roadmap">ROADMAP</a></li>
 
 </ul>
 </div>
@@ -528,9 +528,9 @@ background: #FEDC00;
 <p class="hero-description aos-init aos-animate" data-aos="fade">Are you ready for the most extreme BSC launch of this Easter? If you answered yes, then you are in luck!</p>
 <div class="d-flex flex-column flex-sm-row mt-3">
 <a type="button" class="d-none buy-button btn btn-primary m-2 aos-init aos-animate" href="https://mm.finance/swap?outputCurrency=0x7be290f190a88380b56d5a16d54684befbdee154" target="_blank" data-aos="fade">Buy On MMSwap</a>
-<a type="button" class="d-none telegram-button btn btn-primary m-2" href="https://t.me/crogo" target="_blank">Join Our Telegram</a><a href="https://www.milkyswap.exchange/swap?outputCurrency=0x57b2f1eb603ab3871f3f99066d1deec7ab0bdeaa" target="_blank"><button class="pushable buy-pushable-button aos-init aos-animate" data-aos="fade">
+<a type="button" class="d-none telegram-button btn btn-primary m-2" href="https://t.me/crogo" target="_blank">Join Our Telegram</a><a href="https://pancakeswap.finance/swap?inputCurrency=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c&amp;outputCurrency=0xa0468c1652caba8dcd1f84ab498af4165784f429" target="_blank"><button class="pushable buy-pushable-button aos-init aos-animate" data-aos="fade">
   <span class="front">Buy On Pancakeswap</span>
-</button></a><a href="https://t.me/ShibaMilkPortal" target="_blank"><button class="pushable telegram-pushable-button ms-sm-3 mt-3 mt-sm-0 aos-init aos-animate" data-aos="fade">
+</button></a><a href="https://t.me/EggstremeEaster" target="_blank"><button class="pushable telegram-pushable-button ms-sm-3 mt-3 mt-sm-0 aos-init aos-animate" data-aos="fade">
   <span class="front">Join Our Telegram</span>
 </button></a>
 </div>
@@ -546,35 +546,35 @@ background: #FEDC00;
 
 <section id="about" class="section about-section">
 <div class="section-container about-container container py-5 aos-animate aos-init">
-<h2 class="section-title about-title mt-4 text-center aos-init" data-aos="fade">ABOUT</h2>
+<h2 class="section-title about-title mt-4 text-center aos-init aos-animate" data-aos="fade">ABOUT</h2>
 
 <div class="row mt-5">
 <div class="col-12 text-center">
-<p class="section-description about-description aos-init" data-aos="fade">Introducing Eggstreme Easter, a project with a clever name that was developed by a clever team. This token is original and a breath of fresh air. There have been a plethora of unoriginal Easter tokens recently launched, but this one is looking to set itself apart from the pack. Will you take the dive and ape into the Eggstreme?</p>
+<p class="section-description about-description aos-init aos-animate" data-aos="fade">Introducing Eggstreme Easter, a project with a clever name that was developed by a clever team. This token is original and a breath of fresh air. There have been a plethora of unoriginal Easter tokens recently launched, but this one is looking to set itself apart from the pack. Will you take the dive and ape into the Eggstreme?</p>
 </div>
 </div>
 </div>
 </section>
 
 <section id="tokenomics" class="section tokenomics-section pt-5">
-<div class="section-container tokenomics-container container py-5 aos-init" data-aos="fade">
-<h2 class="section-title tokenomics-title text-center aos-init" data-aos="fade">TOKENOMICS</h2>
+<div class="section-container tokenomics-container container py-5 aos-init aos-animate" data-aos="fade">
+<h2 class="section-title tokenomics-title text-center aos-init aos-animate" data-aos="fade">TOKENOMICS</h2>
 <div class="row mt-5 mb-4">
 
 <div class="col-12 col-lg-4 mb-4">
-<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init" data-aos="fade">
+<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init aos-animate" data-aos="fade">
 <span class="tax-title text-center mb-3">2%</span>
+<span class="tax-title-2 text-center">Rewards</span><span class="tax-description text-center"></span>
+</div>
+</div>
+<div class="col-12 col-lg-4 mb-4">
+<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init aos-animate" data-aos="fade">
+<span class="tax-title text-center mb-3">3%</span>
 <span class="tax-title-2 text-center">Liquidity Pool</span><span class="tax-description text-center"></span>
 </div>
 </div>
 <div class="col-12 col-lg-4 mb-4">
-<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init" data-aos="fade">
-<span class="tax-title text-center mb-3">2%</span>
-<span class="tax-title-2 text-center">Development</span><span class="tax-description text-center"></span>
-</div>
-</div>
-<div class="col-12 col-lg-4 mb-4">
-<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init" data-aos="fade">
+<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init aos-animate" data-aos="fade">
 <span class="tax-title text-center mb-3">8%</span>
 <span class="tax-title-2 text-center">Marketing</span><span class="tax-description text-center"></span>
 </div>
@@ -587,8 +587,8 @@ background: #FEDC00;
 
 
 
-<section id="roadmap" class="section roadmap-section">
-<div class="d-none section-container roadmap-container container py-5 aos-init aos-animate" data-aos="fade">
+<section id="roadmap" class="d-none section roadmap-section">
+<div class="section-container roadmap-container container py-5 aos-init aos-animate" data-aos="fade">
 <div class="text-center">
 <h2 class="section-title roadmap-title mt-4 aos-init aos-animate" data-aos="fade" style="color:#FEDC00">ROADMAP</h2>
 
@@ -683,6 +683,57 @@ background: #FEDC00;
 </div>
 </section>
 
+<section id="roadmap" class="section roadmap-section">
+<div class="section-container roadmap-container container py-5 aos-init" data-aos="fade">
+<div class="text-center">
+<h2 class="section-title roadmap-title mt-4 aos-init" data-aos="fade" style="color:#FEDC00">ROADMAP</h2>
+<div class="row mt-4 mb-4">
+<div class="col-12 col-lg-4 text-center py-3">
+<h4>PHASE 1</h4>
+<ul class="list-unstyled text-small text-center mt-3">
+<li>Telegram and Twitter Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#3665B7" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>Initial Marketing Campaign<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#3665B7" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>Pancakeswap Fair Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#3665B7" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>LP Lock Extension<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#3665B7" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>Website V1 Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#3665B7" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+</ul>
+</div>
+<div class="col-12 col-lg-4 text-center py-3">
+<h4>PHASE 2</h4>
+<ul class="list-unstyled text-small text-center mt-3">
+<li>Community Shilling</li>
+<li>Coin Listing Sites</li>
+<li>Telegram and Twitter Calls</li>
+<li>Coingecko Listing</li>
+<li>Coinmarketcap Listing</li>
+</ul>
+</div>
+<div class="col-12 col-lg-4 text-center py-3">
+<h4>PHASE 3</h4>
+<ul class="list-unstyled text-small text-center mt-3">
+<li>Infinistaking Release</li>
+<li>Infiniswap Release</li>
+<li>InfiniDonations</li>
+<li>Secret Utilities Along With</li>
+<li>Massive Marketing Campaign</li>
+</ul>
+</div>
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+</div>
+</section>
 <section class="section swap-section d-none">
 <div class="section-container swap-container container py-5 aos-init aos-animate" data-aos="fade">
 <div class="text-center">
@@ -706,14 +757,14 @@ background: #FEDC00;
 <div class="row mt-4">
 <div class="col-12 d-flex flex-column justify-content-center align-items-center">
 <ul class="list-unstyled text-small text-center">
-<li><a class="text-decoration-none mb-1" href="https://t.me/ShibaMilkPortal" target="_blank" rel="nofollow">Telegram</a></li>
+<li><a class="text-decoration-none mb-1" href="https://t.me/EggstremeEaster" target="_blank" rel="nofollow">Telegram</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Discord</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Reddit</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Instagram</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Facebook</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Twitter</a></li>
-<li><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Poocoin</a></li>
-<li><a class="text-decoration-none" href="" target="_blank" rel="nofollow">PancakeSwap</a></li>
+<li><a class="text-decoration-none" href="https://poocoin.app/tokens/0xa0468c1652caba8dcd1f84ab498af4165784f429" target="_blank" rel="nofollow">Poocoin</a></li>
+<li><a class="text-decoration-none" href="https://pancakeswap.finance/swap?inputCurrency=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c&amp;outputCurrency=0xa0468c1652caba8dcd1f84ab498af4165784f429" target="_blank" rel="nofollow">PancakeSwap</a></li>
 </ul>
 </div>
 </div>
