--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ font-size:3em;;
 letter-spacing:0px;
     position:relative;
 color:#FEDC00;
+	text-align: center !important;
 }
 /*
     .hero-title::before {
@@ -355,6 +356,7 @@ text-align: left !important;
 font-weight:900;
 font-size:4em;
 letter-spacing:0px;
+	
 }
     
 .navbar-expand-lg .navbar-nav .nav-link {
@@ -530,7 +532,7 @@ background: #FEDC00;
 <a type="button" class="d-none buy-button btn btn-primary m-2 aos-init aos-animate" href="https://mm.finance/swap?outputCurrency=0x7be290f190a88380b56d5a16d54684befbdee154" target="_blank" data-aos="fade">Buy On MMSwap</a>
 <a type="button" class="d-none telegram-button btn btn-primary m-2" href="https://t.me/crogo" target="_blank">Join Our Telegram</a><a href="https://pancakeswap.finance/swap?inputCurrency=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c&amp;outputCurrency=0xa0468c1652caba8dcd1f84ab498af4165784f429" target="_blank"><button class="pushable buy-pushable-button aos-init aos-animate" data-aos="fade">
   <span class="front">Buy On Pancakeswap</span>
-</button></a><a href="https://t.me/EggstremeEaster" target="_blank"><button class="pushable telegram-pushable-button ms-sm-3 mt-3 mt-sm-0 aos-init aos-animate" data-aos="fade">
+</button></a><a href="https://t.me/EggstremeEaster" target="_blank"><button class="pushable telegram-pushable-button ms-sm-3 mt-3 mt-sm-0 w-100 aos-init aos-animate" data-aos="fade">
   <span class="front">Join Our Telegram</span>
 </button></a>
 </div>
