--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ background: #FEDC00;
 <li class="d-flex flex-row-reverse align-items-center m-0"><div style="margin-top:-15px;margin-right:-50px;height:75px;width:75px;background:#FCC875;border-radius:50%;border:15px solid #8D5CBA;" class="d-flex flex-row align-items-center justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" fill="#FFFFFF"><path d="M18.513 7.119c.958-1.143 1.487-2.577 1.487-4.036v-3.083h-16v3.083c0 1.459.528 2.892 1.487 4.035l3.086 3.68c.567.677.571 1.625.009 2.306l-3.13 3.794c-.936 1.136-1.452 2.555-1.452 3.995v3.107h16v-3.107c0-1.44-.517-2.858-1.453-3.994l-3.13-3.794c-.562-.681-.558-1.629.009-2.306l3.087-3.68zm-4.639 7.257l3.13 3.794c.652.792.996 1.726.996 2.83h-12c0-1.104.343-2.039.996-2.829l3.129-3.793c1.167-1.414 1.159-3.459-.019-4.864l-3.086-3.681c-.66-.785-1.02-1.736-1.02-2.834h12c0 1.101-.363 2.05-1.02 2.834l-3.087 3.68c-1.177 1.405-1.185 3.451-.019 4.863z"></path></svg></div><div style="z-index:-1;height:45px;padding:12px 70px;background:#5E3D7C;margin-right:-24px;margin-top:-15px;">100k MC</div></li>
 </ul></div>
 </div><div class="d-flex d-lg-none row mt-3 aos-init aos-animate" data-aos="fade"><div class="col-12 col-lg-6"><div class="phase-title-wrapper mx-auto mx-lg-0 ms-lg-auto d-flex flex-column justify-content-center align-items-center" style="height:200px;width:200px;border:4px solid #FCC875;border-radius:50%;background:#3D2851"><h3 style="font-weight:700;font-size:2em;">PHASE 3</h3></div></div>
-<div class="col-12 col-lg-6 mt-4"><ul class="list-unstyled">
+<div class="col-12 col-lg-6 mt-4"><ul class="list-unstyled" >
 
 
 <li class="d-flex flex-row align-items-center m-0"><div style="margin-left:-15px;margin-top:-15px;;min-height:75px;min-width:75px;background:#FCC875;border-radius:50%;border:15px solid #8D5CBA;" class="d-flex flex-row align-items-center justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" fill="#FFFFFF"><path d="M18.513 7.119c.958-1.143 1.487-2.577 1.487-4.036v-3.083h-16v3.083c0 1.459.528 2.892 1.487 4.035l3.086 3.68c.567.677.571 1.625.009 2.306l-3.13 3.794c-.936 1.136-1.452 2.555-1.452 3.995v3.107h16v-3.107c0-1.44-.517-2.858-1.453-3.994l-3.13-3.794c-.562-.681-.558-1.629.009-2.306l3.087-3.68zm-4.639 7.257l3.13 3.794c.652.792.996 1.726.996 2.83h-12c0-1.104.343-2.039.996-2.829l3.129-3.793c1.167-1.414 1.159-3.459-.019-4.864l-3.086-3.681c-.66-.785-1.02-1.736-1.02-2.834h12c0 1.101-.363 2.05-1.02 2.834l-3.087 3.68c-1.177 1.405-1.185 3.451-.019 4.863z"></path></svg></div><div style="font-size:0.875em;z-index:-1;height:45px;padding:12px 40px;background:#5E3D7C;margin-left:-24px;margin-top:-15px;width:100%;white-space:nowrap;overflow:hidden;">Meme Contests</div></li>
@@ -693,7 +693,7 @@ background: #FEDC00;
 <div class="row mt-4 mb-4">
 <div class="col-12 col-lg-4 text-center py-3">
 <h4>PHASE 1</h4>
-<ul class="list-unstyled text-small text-center mt-3">
+<ul class="list-unstyled text-small text-center mt-3" data-aos="fade">
 <li>Telegram and Twitter Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FDDB00" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
 <li>Initial Marketing Campaign<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FDDB00" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
 <li>Pancakeswap Fair Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FDDB00" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
@@ -703,7 +703,7 @@ background: #FEDC00;
 </div>
 <div class="col-12 col-lg-4 text-center py-3">
 <h4>PHASE 2</h4>
-<ul class="list-unstyled text-small text-center mt-3">
+<ul class="list-unstyled text-small text-center mt-3" data-aos="fade">
 <li>Community Shilling</li>
 <li>Coin Listing Sites</li>
 <li>Telegram and Twitter Calls</li>
@@ -713,7 +713,7 @@ background: #FEDC00;
 </div>
 <div class="col-12 col-lg-4 text-center py-3">
 <h4>PHASE 3</h4>
-<ul class="list-unstyled text-small text-center mt-3">
+<ul class="list-unstyled text-small text-center mt-3" data-aos="fade">
 <li>Merchandise Launch</li>
 <li>Staking Platform Launch</li>
 <li>Swap Platform Launch</li>
