--- a/index.html
+++ b/index.html
@@ -691,9 +691,9 @@ background: #FEDC00;
 <div class="text-center">
 <h2 class="section-title roadmap-title mt-4 aos-init" data-aos="fade" style="color:#FEDC00">ROADMAP</h2>
 <div class="row mt-4 mb-4">
-<div class="col-12 col-lg-4 text-center py-3">
-<h4>PHASE 1</h4>
-<ul class="list-unstyled text-small text-center mt-3" data-aos="fade">
+<div class="col-12 col-lg-4 text-center py-3" data-aos="fade">
+<h4 style="color:#FDDB00">PHASE 1</h4>
+<ul class="list-unstyled text-small text-center mt-3">
 <li>Telegram and Twitter Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FDDB00" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
 <li>Initial Marketing Campaign<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FDDB00" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
 <li>Pancakeswap Fair Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FDDB00" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
@@ -701,9 +701,9 @@ background: #FEDC00;
 <li>Website V1 Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FDDB00" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
 </ul>
 </div>
-<div class="col-12 col-lg-4 text-center py-3">
-<h4>PHASE 2</h4>
-<ul class="list-unstyled text-small text-center mt-3" data-aos="fade">
+<div class="col-12 col-lg-4 text-center py-3" data-aos="fade">
+<h4 style="color:#FDDB00">PHASE 2</h4>
+<ul class="list-unstyled text-small text-center mt-3">
 <li>Community Shilling</li>
 <li>Coin Listing Sites</li>
 <li>Telegram and Twitter Calls</li>
@@ -711,9 +711,9 @@ background: #FEDC00;
 <li>Coinmarketcap Listing</li>
 </ul>
 </div>
-<div class="col-12 col-lg-4 text-center py-3">
-<h4>PHASE 3</h4>
-<ul class="list-unstyled text-small text-center mt-3" data-aos="fade">
+<div class="col-12 col-lg-4 text-center py-3"  data-aos="fade">
+<h4 style="color:#FDDB00">PHASE 3</h4>
+<ul class="list-unstyled text-small text-center mt-3">
 <li>Merchandise Launch</li>
 <li>Staking Platform Launch</li>
 <li>Swap Platform Launch</li>
