--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ background: #FEDC00;
 <section id="tokenomics" class="section tokenomics-section pt-5">
 <div class="section-container tokenomics-container container py-5 aos-init aos-animate" data-aos="fade">
 <h2 class="section-title tokenomics-title text-center aos-init aos-animate" data-aos="fade">TOKENOMICS</h2>
-<div class="row mt-5 mb-4">
+<div class="row mb-4" style="margin-top:40px;">
 
 <div class="col-12 col-lg-4 mb-4">
 <div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init aos-animate" data-aos="fade">
