--- a/index.html
+++ b/index.html
@@ -521,24 +521,24 @@ background: #FEDC00;
 
     
 <section class="hero-section">
-<div class="hero-container container py-5 pt-lg-0 pb-lg-4 aos-init aos-animate" data-aos="fade">
+<div class="hero-container container py-5 pt-lg-0 pb-lg-4" data-aos="fade">
 <div class="row">
 
 <div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center align-items-lg-start">
 
-<h1 class="hero-title">EGGSTREME EASTER</h1>
+<h1 class="hero-title" data-aos="fade">EGGSTREME EASTER</h1>
 <img class="img-fluid d-block d-none aos-init aos-animate" src="images/shibam-text.png" style="max-height:70px;" data-aos="fade">
-<p class="hero-description aos-init aos-animate" data-aos="fade">Are you ready for the most extreme BSC launch of this Easter? If you answered yes, then you are in luck!</p>
+<p class="hero-description" data-aos="fade">Are you ready for the most extreme BSC launch of this Easter? If you answered yes, then you are in luck!</p>
 <div class="d-flex flex-column flex-sm-row mt-3">
 <a type="button" class="d-none buy-button btn btn-primary m-2 aos-init aos-animate" href="https://mm.finance/swap?outputCurrency=0x7be290f190a88380b56d5a16d54684befbdee154" target="_blank" data-aos="fade">Buy On MMSwap</a>
-<a type="button" class="d-none telegram-button btn btn-primary m-2" href="https://t.me/crogo" target="_blank">Join Our Telegram</a><a href="https://pancakeswap.finance/swap?inputCurrency=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c&amp;outputCurrency=0xa0468c1652caba8dcd1f84ab498af4165784f429" target="_blank"><button class="pushable buy-pushable-button aos-init aos-animate" data-aos="fade">
+<a type="button" class="d-none telegram-button btn btn-primary m-2" href="https://t.me/crogo" target="_blank">Join Our Telegram</a><a href="https://pancakeswap.finance/swap?inputCurrency=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c&outputCurrency=0xa0468c1652caba8dcd1f84ab498af4165784f429" target="_blank"><button class="pushable buy-pushable-button" data-aos="fade">
   <span class="front">Buy On Pancakeswap</span>
-</button></a><a href="https://t.me/EggstremeEaster" target="_blank"><button class="pushable telegram-pushable-button ms-sm-3 mt-3 mt-sm-0 w-100 aos-init aos-animate" data-aos="fade">
+</button></a><a href="https://t.me/EggstremeEaster" target="_blank"><button class="pushable telegram-pushable-button ms-sm-3 mt-3 mt-sm-0 w-100" data-aos="fade">
   <span class="front">Join Our Telegram</span>
 </button></a>
 </div>
 </div><div class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center py-5">
-<img class="img-fluid hero-img px-3 aos-init aos-animate" src="images/logo-with-text.png" style="width:100%;" data-aos="fade">
+<img class="img-fluid hero-img px-3" src="images/logo-with-text.png" style="width:100%;" data-aos="fade">
 
 
 
@@ -548,36 +548,36 @@ background: #FEDC00;
 </section>
 
 <section id="about" class="section about-section">
-<div class="section-container about-container container py-5 aos-animate aos-init">
-<h2 class="section-title about-title mt-4 text-center aos-init aos-animate" data-aos="fade">ABOUT</h2>
+<div class="section-container about-container container py-5">
+<h2 class="section-title about-title mt-4 text-center" data-aos="fade">ABOUT</h2>
 
 <div class="row mt-4">
 <div class="col-12 text-center">
-<p class="section-description about-description aos-init aos-animate" data-aos="fade">Introducing Eggstreme Easter, a project with a clever name that was developed by a clever team. This token is original and a breath of fresh air. There have been a plethora of unoriginal Easter tokens recently launched, but this one is looking to set itself apart from the pack. Will you take the dive and ape into the Eggstreme?</p>
+<p class="section-description about-description" data-aos="fade">Introducing Eggstreme Easter, a project with a clever name that was developed by a clever team. This token is original and a breath of fresh air. There have been a plethora of unoriginal Easter tokens recently launched, but this one is looking to set itself apart from the pack. Will you take the dive and ape into the Eggstreme?</p>
 </div>
 </div>
 </div>
 </section>
 
 <section id="tokenomics" class="section tokenomics-section pt-5">
-<div class="section-container tokenomics-container container py-5 aos-init aos-animate" data-aos="fade">
-<h2 class="section-title tokenomics-title text-center aos-init aos-animate" data-aos="fade">TOKENOMICS</h2>
+<div class="section-container tokenomics-container container py-5">
+<h2 class="section-title tokenomics-title text-center" data-aos="fade">TOKENOMICS</h2>
 <div class="row mb-4" style="margin-top:40px;">
 
 <div class="col-12 col-lg-4 mb-4">
-<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init aos-animate" data-aos="fade">
+<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto" data-aos="fade">
 <span class="tax-title text-center mb-3">2%</span>
 <span class="tax-title-2 text-center">Rewards</span><span class="tax-description text-center"></span>
 </div>
 </div>
 <div class="col-12 col-lg-4 mb-4">
-<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init aos-animate" data-aos="fade">
+<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto" data-aos="fade">
 <span class="tax-title text-center mb-3">3%</span>
 <span class="tax-title-2 text-center">Liquidity Pool</span><span class="tax-description text-center"></span>
 </div>
 </div>
 <div class="col-12 col-lg-4 mb-4">
-<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto aos-init aos-animate" data-aos="fade">
+<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto" data-aos="fade">
 <span class="tax-title text-center mb-3">8%</span>
 <span class="tax-title-2 text-center">Marketing</span><span class="tax-description text-center"></span>
 </div>
@@ -673,7 +673,7 @@ background: #FEDC00;
 </ul></div>
 </div>
 
-<div class="d-none d-lg-flex row mt-5 aos-init aos-animate" data-aos="fade"><div class="col-12 col-lg-6 order-sm-1 order-lg-2"><div class="phase-title-wrapper mx-auto mx-lg-0 me-lg-auto d-flex flex-column justify-content-center align-items-center" style="height:285px;width:285px;border:4px solid #FCC875;border-radius:50%;background:#3D2851"><h3 style="font-weight:700;font-size:2em;">PHASE 4</h3></div></div>
+<div class="d-none d-lg-flex row mt-5" data-aos="fade"><div class="col-12 col-lg-6 order-sm-1 order-lg-2"><div class="phase-title-wrapper mx-auto mx-lg-0 me-lg-auto d-flex flex-column justify-content-center align-items-center" style="height:285px;width:285px;border:4px solid #FCC875;border-radius:50%;background:#3D2851"><h3 style="font-weight:700;font-size:2em;">PHASE 4</h3></div></div>
 <div class="col-12 col-lg-6 order-sm-2 order-lg-1"><ul class="list-unstyled"><li class="d-flex flex-row-reverse align-items-center m-0"><div style="margin-top:-15px;margin-right:-50px;height:75px;width:75px;background:#FCC875;border-radius:50%;border:15px solid #8D5CBA;" class="d-flex flex-row align-items-center justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" fill="#FFFFFF"><path d="M18.513 7.119c.958-1.143 1.487-2.577 1.487-4.036v-3.083h-16v3.083c0 1.459.528 2.892 1.487 4.035l3.086 3.68c.567.677.571 1.625.009 2.306l-3.13 3.794c-.936 1.136-1.452 2.555-1.452 3.995v3.107h16v-3.107c0-1.44-.517-2.858-1.453-3.994l-3.13-3.794c-.562-.681-.558-1.629.009-2.306l3.087-3.68zm-4.639 7.257l3.13 3.794c.652.792.996 1.726.996 2.83h-12c0-1.104.343-2.039.996-2.829l3.129-3.793c1.167-1.414 1.159-3.459-.019-4.864l-3.086-3.681c-.66-.785-1.02-1.736-1.02-2.834h12c0 1.101-.363 2.05-1.02 2.834l-3.087 3.68c-1.177 1.405-1.185 3.451-.019 4.863z"></path></svg></div><div style="z-index:-1;height:45px;padding:12px 70px;background:#5E3D7C;margin-right:-24px;margin-top:-15px;">Staking</div></li>
 
 <li class="d-flex flex-row-reverse align-items-center m-0"><div style="margin-top:-15px;margin-right:-25px;height:75px;width:75px;background:#FCC875;border-radius:50%;border:15px solid #8D5CBA;" class="d-flex flex-row align-items-center justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" fill="#FFFFFF"><path d="M18.513 7.119c.958-1.143 1.487-2.577 1.487-4.036v-3.083h-16v3.083c0 1.459.528 2.892 1.487 4.035l3.086 3.68c.567.677.571 1.625.009 2.306l-3.13 3.794c-.936 1.136-1.452 2.555-1.452 3.995v3.107h16v-3.107c0-1.44-.517-2.858-1.453-3.994l-3.13-3.794c-.562-.681-.558-1.629.009-2.306l3.087-3.68zm-4.639 7.257l3.13 3.794c.652.792.996 1.726.996 2.83h-12c0-1.104.343-2.039.996-2.829l3.129-3.793c1.167-1.414 1.159-3.459-.019-4.864l-3.086-3.681c-.66-.785-1.02-1.736-1.02-2.834h12c0 1.101-.363 2.05-1.02 2.834l-3.087 3.68c-1.177 1.405-1.185 3.451-.019 4.863z"></path></svg></div><div style="z-index:-1;height:45px;padding:12px 70px;background:#5E3D7C;margin-right:-24px;margin-top:-15px;">NFT Platform</div></li>
