--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ color:#ffffff;
 font-size:3em;
 font-weight:700;
 /*text-shadow: 10px #2C174F;*/
-    text-shadow: -1px 0 #2C174F, 0 1px #2C174F, 1px 0 #2C174F, 0 -1px #2C174F;  
+    /* text-shadow: -1px 0 #2C174F, 0 1px #2C174F, 1px 0 #2C174F, 0 -1px #2C174F; */
 }
 
 /* ---------------- */
